--- a/blogicum/templates/blog/create.html
+++ b/blogicum/templates/blog/create.html
@@ -23,7 +23,7 @@
       </div>
       <div class="card-body">
         <form method="post" enctype="multipart/form-data">
-          {% csrf_token %}
+<!--          {% csrf_token %}-->
           {% if not '/delete/' in request.path %}
             {% bootstrap_form form %}
           {% else %}
